# Vsomeip_Application

./: CMakeLists.txt  README.md  client1.cpp  client1.json  clinet2.json
Speed_Monitoring/Config/: client1.json  client2.json
Speed_Monitoring/src/: client2.cpp  vsomeip_ids.hpp
app/: CMakeLists.txt  client1.cpp  client1.json  client2.cpp  client2.json  server.cpp  server.json  vsomeip_ids.hpp
final/: CMakeLists.txt  client1.cpp  client1.json  client2.cpp  client2.json  ns  server.cpp  server.json
